css/style.css
@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300&display=swap");
@import url(./mobile.css);
@import url(./desktop.css);

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font: inherit;
  font-family: "Lato", sans-serif;
}

body {
  min-height: 100vh;
}

a {
  color: inherit;
  text-decoration: inherit;
}

img,
picture {
  display: block;
}

.container {
  display: grid;
  max-width: 1100px;
  margin: 0 auto;
  padding: 10px;
  place-items: center;
  grid-template-areas:
    "header"
    "postcards"
    "footer";
  grid-template-columns: auto;
}

header {
  display: grid;
  width: 100%;
  height: 10vh;
  grid-area: header;
  align-items: center;
}

.navbar > ul > h1 {
  font-weight: bold;
  font-size: 2.5rem;
  color: #606c76;
}

.navbar > ul > h2 {
  font-size: 1.2rem;
  color: #8a9ba9;
}

.navbar > ul {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 20px;
}

.postcard-section {
  display: grid;
  grid-area: postcards;
  grid-auto-columns: 1fr;
  grid-template-rows: auto;
  gap: 10px;
}
.card-container {
  display: flex;
  justify-content: space-between;
  max-width: 45ch;
  border: 2px solid gray;
  border-radius: 4px;
  padding: 10px 20px;
}

.postcard {
}

.postcard > p {
  margin: 10px 0;
  font-weight: 300;
  font-size: 0.9rem;
}

.postcard > h2 {
  font-weight: bold;
  font-size: 1.5rem;
}

.postcard > h3 {
  font-weight: bold;
  color: #9b4dca;
}

.postcard:nth-child(even) > h3 {
  color: #5baf2e;
}

.postcard > h4 {
  color: #adadad;
}

.postcard > a {
  width: max-content;
  margin-top: auto;
  color: #3f82ce;
  text-decoration: underline;
}
.postcard > a:active {
  color: #1d5aa1;
}

.card-image {
  align-self: center;
}

footer {
  width: 100%;
  height: 10vh;
  display: grid;
  grid-area: footer;
  place-items: center;
}

